--- a/css/cards.css
+++ b/css/cards.css
@@ -155,6 +155,10 @@ i {
   padding-right: 0 !important;
 }
 
+h5{
+  font-size: 1.6rem;
+}
+
 @media (width <= 1400px) {
   .cards-list,
   .cards-list2 {
