--- a/css/fundo-icons.css
+++ b/css/fundo-icons.css
@@ -7,7 +7,7 @@
   box-shadow: var(--color-shadow) 0px 5px 20px 5px;
   display: flex;
   justify-content: space-between;
-  margin-top: 1rem;
+  margin-top: 3rem;
 
   & p {
     margin-left: 2rem;
@@ -21,6 +21,10 @@
   }
 }
 
+.darkmode .fundo-icons p{
+  color: var(--color-text);
+}
+
 .dropdown {
   display: flex;
   align-items: center;
@@ -31,5 +35,9 @@
 @media (width <= 992px) {
   .fundo-icons {
     margin-top: 12rem;
+
+    & p{
+      display: none;
+    }
   }
 }
