--- a/css/graficos.css
+++ b/css/graficos.css
@@ -35,8 +35,9 @@
 }
 
 .fundo {
-  padding: 5rem;
+  padding: 3rem;
   display: flex;
+  flex-direction: column;
   width: 44.5%;
   margin: 8rem 1rem 2rem 1rem;
   box-shadow: var(--color-shadow) 0px 5px 20px 5px;
@@ -45,7 +46,7 @@
   justify-content: center;
 }
 
-.posicionamento-fundo{
+.posicionamento-fundo {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,21 +61,46 @@
   padding: 0 10px;
 }
 
-@media (width <= 1400px){
-  .posicionamento-fundo{
+.darkmode .modal-header h3 {
+  color: var(--color-dark);
+}
+
+.title {
+  font-size: 4rem;
+  text-align: center;
+}
+
+.ajuste-itens-grafico {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 1rem;
+
+  & i {
+    font-size: 2.5rem;
+    color: var(--color-darkBlue);
+  }
+
+  & i:hover {
+    color: var(--color-blue);
+  }
+}
+
+@media (width <= 1400px) {
+  .posicionamento-fundo {
     display: grid;
-    grid-template-columns: repeat(1,2fr);
+    grid-template-columns: repeat(1, 2fr);
     justify-items: center;
   }
 
-  .fundo{
+  .fundo {
     max-height: 60rem;
     margin: 2rem 0 2rem 0;
   }
 }
 
-@media (width <= 992px){
-  .fundo{
+@media (width <= 992px) {
+  .fundo {
     margin-top: 8rem !important;
   }
 }
